--- a/index.html
+++ b/index.html
@@ -21,40 +21,44 @@ body, html {
 /* HEADER */
 .header {
     display: flex;
-    flex-direction: row; /* row layout */
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     padding: 10px 15px;
-    background-color: #1a237e;
-    color: white;
-    gap: 15px; /* space between logo and title */
+    background-color: #ffffff; /* WHITE background */
+    color: black;
+    gap: 15px;
     position: relative;
 }
 
-/* HB LOGO */
+/* LOGO IMAGE */
 .hb-logo {
     width: 60px;
     height: 60px;
-    background: linear-gradient(135deg, #ffd700, #ff6b4a);
     border-radius: 50%;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Libre Baskerville', serif;
-    font-weight: 700;
-    font-size: 24px;
-    color: #1a237e;
     box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    background: none;
 }
 
-/* Header Title */
+.hb-logo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* Header title font */
 .header h1 {
-    font-family: 'Libre Baskerville', serif;
-    font-size: 2.4em;
+    font-family: 'Libre Baskerville', serif !important;
+    font-size: 2.2em;
     margin: 0;
     font-weight: 700;
     text-align: left;
-    color: #ffd700;
+    color: #000000; /* BLACK title text */
+    letter-spacing: 1px;
 }
 
 /* Gradient underline */
@@ -65,7 +69,7 @@ body, html {
     left: 25%;
     width: 50%;
     height: 3px;
-    background: linear-gradient(90deg, #ff6b4a, #1a237e);
+    background: linear-gradient(90deg, #000000, #555555); /* black → gray */
     border-radius: 3px;
 }
 
@@ -153,7 +157,7 @@ body, html {
     animation-play-state: paused;
 }
 
-/* Underline */
+/* Gradient underline */
 .section-title::after {
     content: '';
     display: block;
@@ -164,7 +168,7 @@ body, html {
     border-radius: 3px;
 }
 
-/* IFRAME */
+/* IFRAME STYLING */
 .iframe-wrapper {
     position: relative;
     z-index: 1;
@@ -222,7 +226,9 @@ footer::before {
 
 <!-- HEADER -->
 <div class="header">
-    <div class="hb-logo">HB</div>
+    <div class="hb-logo">
+        <img src="https://raw.githubusercontent.com/HomeBakery/HB_Logo/main/HB.jpg" alt="Home Bakery Logo">
+    </div>
     <h1>HOME BAKERY</h1>
 </div>
 
@@ -235,7 +241,7 @@ footer::before {
                 <span class="analysis-text">WEEKLY SALES PERFORMANCE</span>
             </span>
         </h2>
-        <iframe title="Weekly" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=9e3ba6d2-9eb9-4be1-801b-6aa34cf822a2&autoAuth=true&ctid=59201bac-affb-445d-9fc1-5968f12e7184" frameborder="0" allowFullScreen="true"></iframe>
+        <iframe title="Weekly_Sales" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=9e3ba6d2-9eb9-4be1-801b-6aa34cf822a2&autoAuth=true&ctid=59201bac-affb-445d-9fc1-5968f12e7184" frameborder="0" allowFullScreen="true"></iframe>
     </div>
 </div>
 
@@ -246,4 +252,3 @@ footer::before {
 
 </body>
 </html>
-
